# harrypotter

./: .gitignore  README.md  wrangler.jsonc
demo-web/: .env.example  README.md  oracle-client.js  package.json  server.js
demo-web/public/: app.js  index.html  ink-timing.js  styles.css  supabase-client.js  supabase-config.js
demo-web/test/: deployment-config.test.js  ink-timing.test.js  oracle-client.test.js
docs/: DEMO_WEB_DESIGN.md  PRODUCT_REQUIREMENTS.md
docs/superpowers/specs/: 2026-07-18-supabase-full-migration-design.md  2026-07-18-zhipu-api-migration-design.md  2026-07-19-ink-animation-design.md
inktype/: Cargo.toml  README.md  build-takeover.sh  build.rs  external.manifest.json  make-bundle.sh  oracle.env.example  settings.schema.json
inktype/scripts/: appload-launch.sh  inktype-takeover.sh
inktype/src/: main.rs  oracle.rs  repl.rs
quill/: build.sh
riddle/src/: ink.rs  main.rs  oracle.rs
supabase/: config.toml
supabase/functions/ask-diary/: index.ts
supabase/migrations/: 20260718000100_create_memories.sql
