[package]
name = "inktype"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Pen-up handwriting-to-typeset experiment for the reMarkable Paper Pro"

[dependencies]
libc = "0.2"
signal-hook = "0.3"
png = "0.17"
ab_glyph = "0.2"
serde_json = "1"
ureq = { version = "2.10", default-features = false, features = ["tls", "json"] }

[features]
takeover = []

[profile.release]
strip = true
lto = true
